syntax = "proto3";

package tendermint.abci;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "tendermint/crypto/keys.proto";
import "tendermint/crypto/proof.proto";
import "tendermint/types/params.proto";
import "tendermint/types/types.proto";

option go_package = "github.com/sei-protocol/sei-chain/sei-tendermint/abci/types";

// This file is copied from http://github.com/tendermint/abci
// NOTE: When using custom types, mind the warnings.
// https://github.com/gogo/protobuf/blob/master/custom_types.md#warnings-and-issues

//----------------------------------------
message RequestEcho {
  string message = 1;
}

message RequestFlush {}

message RequestInfo {
  string version = 1;
  uint64 block_version = 2;
  uint64 p2p_version = 3;
  string abci_version = 4;
}

message RequestInitChain {
  google.protobuf.Timestamp time = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  string chain_id = 2;
  tendermint.types.ConsensusParams consensus_params = 3;
  repeated ValidatorUpdate validators = 4 [(gogoproto.nullable) = false];
  bytes app_state_bytes = 5;
  int64 initial_height = 6;
}

message RequestQuery {
  bytes data = 1;
  string path = 2;
  int64 height = 3;
  bool prove = 4;
}

message RequestCommit {}

message RequestPrepareProposal {
  // the modified transactions cannot exceed this size.
  int64 max_tx_bytes = 1;
  // txs is an array of transactions that will be included in a block,
  // sent to the app for possible modifications.
  repeated bytes txs = 2;
  reserved 3; // local_last_commit
  reserved "local_last_commit";
  repeated Misbehavior byzantine_validators = 4 [(gogoproto.nullable) = false];
  int64 height = 5;
  google.protobuf.Timestamp time = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  bytes next_validators_hash = 7;
  // address of the public key of the validator proposing the block.
  bytes proposer_address = 8;
  bytes app_hash = 9;
  bytes validators_hash = 10;
  bytes consensus_hash = 11;
  bytes data_hash = 12;
  bytes evidence_hash = 13;
  bytes last_block_hash = 14;
  int64 last_block_part_set_total = 15;
  bytes last_block_part_set_hash = 16;
  bytes last_commit_hash = 17;
  bytes last_results_hash = 18;
  CommitInfo local_last_commit_info = 19 [(gogoproto.nullable) = false]; // meant to replace the deprecated ExtendedCommitInfo local_last_commit
}

message RequestBeginBlock {
  bytes hash = 1;
  tendermint.types.Header header = 2 [(gogoproto.nullable) = false];
  LastCommitInfo last_commit_info = 3 [(gogoproto.nullable) = false];
  repeated Evidence byzantine_validators = 4 [(gogoproto.nullable) = false];
  bool simulate = 5;
}

message RequestEndBlock {
  int64 height = 1;
  int64 block_gas_used = 2;
}

//----------------------------------------
// nondeterministic
message ResponseException {
  string error = 1;
}

message ResponseEcho {
  string message = 1;
}

message ResponseFlush {}

message ResponseInfo {
  string data = 1;

  // this is the software version of the application. TODO: remove?
  string version = 2;
  uint64 app_version = 3;

  int64 last_block_height = 4;
  bytes last_block_app_hash = 5;
  string minimum_gas_prices = 6;
}

message ResponseInitChain {
  tendermint.types.ConsensusParams consensus_params = 1;
  repeated ValidatorUpdate validators = 2 [(gogoproto.nullable) = false];
  bytes app_hash = 3;
}

message ResponseQuery {
  uint32 code = 1;
  // bytes data = 2; // use "value" instead.
  string log = 3; // nondeterministic
  string info = 4; // nondeterministic
  int64 index = 5;
  bytes key = 6;
  bytes value = 7;
  tendermint.crypto.ProofOps proof_ops = 8;
  int64 height = 9;
  string codespace = 10;
}

message ResponseBeginBlock {
  repeated Event events = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "events,omitempty"
  ];
}

message ResponseCheckTx {
  uint32 code = 1;
  bytes data = 2;
  string log = 3; // nondeterministic
  int64 gas_wanted = 5;
  string codespace = 8;
  string sender = 9;
  int64 priority = 10;
  int64 gas_estimated = 12;

  reserved 4, 6, 7, 11; // see https://github.com/tendermint/tendermint/issues/8543
}

message ResponseDeliverTx {
  uint32 code = 1;
  bytes data = 2;
  string log = 3; // nondeterministic
  string info = 4; // nondeterministic
  int64 gas_wanted = 5 [json_name = "gas_wanted"];
  int64 gas_used = 6 [json_name = "gas_used"];
  repeated Event events = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "events,omitempty"
  ]; // nondeterministic
  string codespace = 8;
  EvmTxInfo evm_tx_info = 9;
}

message ResponseEndBlock {
  repeated ValidatorUpdate validator_updates = 1 [(gogoproto.nullable) = false];
  ConsensusParams consensus_param_updates = 2;
  repeated Event events = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "events,omitempty"
  ];
}

message ResponseCommit {
  // reserve 1
  int64 retain_height = 3;
}

message ResponsePrepareProposal {
  repeated TxRecord tx_records = 1;
  bytes app_hash = 2;
  repeated ExecTxResult tx_results = 3;
  repeated ValidatorUpdate validator_updates = 4;
  tendermint.types.ConsensusParams consensus_param_updates = 5;
}

message ResponseFinalizeBlock {
  repeated Event events = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "events,omitempty"
  ];
  repeated ExecTxResult tx_results = 2;
  repeated ValidatorUpdate validator_updates = 3 [(gogoproto.nullable) = false];
  tendermint.types.ConsensusParams consensus_param_updates = 4;
  bytes app_hash = 5;
}

message ResponseGetTxPriorityHint {
  int64 priority = 1; // higher is better
}

//----------------------------------------
// Misc.

message CommitInfo {
  int32 round = 1;
  repeated VoteInfo votes = 2 [(gogoproto.nullable) = false];
}

message LastCommitInfo {
  int32 round = 1;
  repeated VoteInfo votes = 2 [(gogoproto.nullable) = false];
}

// Event allows application developers to attach additional information to
// ResponseFinalizeBlock, ResponseDeliverTx, ExecTxResult
// Later, transactions may be queried using these events.
message Event {
  string type = 1;
  repeated EventAttribute attributes = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "attributes,omitempty"
  ];
}

// EventAttribute is a single key-value pair, associated with an event.
message EventAttribute {
  bytes key = 1;
  bytes value = 2;
  bool index = 3; // nondeterministic
}

// ExecTxResult contains results of executing one individual transaction.
//
// * Its structure is equivalent to #ResponseDeliverTx which will be deprecated/deleted
message ExecTxResult {
  uint32 code = 1;
  bytes data = 2;
  string log = 3; // nondeterministic
  string info = 4; // nondeterministic
  int64 gas_wanted = 5;
  int64 gas_used = 6;
  repeated Event events = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "events,omitempty"
  ]; // nondeterministic
  string codespace = 8;
  EvmTxInfo evm_tx_info = 9;
}

// TxResult contains results of executing the transaction.
//
// One usage is indexing transaction results.
message TxResult {
  int64 height = 1;
  uint32 index = 2;
  bytes tx = 3;
  ExecTxResult result = 4 [(gogoproto.nullable) = false];
}

message TxRecord {
  TxAction action = 1;
  bytes tx = 2;

  // TxAction contains App-provided information on what to do with a transaction that is part of a raw proposal
  // Deprecate entire usage: https://github.com/tendermint/tendermint/pull/9283
  enum TxAction {
    UNMODIFIED = 0; // The Application did not modify this transaction.
  }
}

message BlockParams {
  // Note: must be greater than 0
  int64 max_bytes = 1;
  // Note: must be greater or equal to -1
  int64 max_gas = 2;
  // Minimum txs to include in a block regardless of gas limit
  int64 min_txs_in_block = 3;
  // Maximum gas wanted in a block. Must be greater than or equal to -1
  int64 max_gas_wanted = 4;
}

message ConsensusParams {
  BlockParams block = 1;
  tendermint.types.EvidenceParams evidence = 2;
  tendermint.types.ValidatorParams validator = 3;
  tendermint.types.VersionParams version = 4;
}

//----------------------------------------
// Blockchain Types

// Validator
message Validator {
  bytes address = 1; // The first 20 bytes of SHA256(public key)
  // PubKey pub_key = 2 [(gogoproto.nullable)=false];
  int64 power = 3; // The voting power
}

// ValidatorUpdate
message ValidatorUpdate {
  tendermint.crypto.PublicKey pub_key = 1 [(gogoproto.nullable) = false];
  int64 power = 2;
}

// VoteInfo
message VoteInfo {
  Validator validator = 1 [(gogoproto.nullable) = false];
  bool signed_last_block = 2;
}

enum MisbehaviorType {
  UNKNOWN = 0;
  DUPLICATE_VOTE = 1;
  LIGHT_CLIENT_ATTACK = 2;
}

message Misbehavior {
  MisbehaviorType type = 1;
  // The offending validator
  Validator validator = 2 [(gogoproto.nullable) = false];
  // The height when the offense occurred
  int64 height = 3;
  // The corresponding time where the offense occurred
  google.protobuf.Timestamp time = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  // Total voting power of the validator set in case the ABCI application does
  // not store historical validators.
  // https://github.com/tendermint/tendermint/issues/4581
  int64 total_voting_power = 5;
}

message Evidence {
  MisbehaviorType type = 1;
  // The offending validator
  Validator validator = 2 [(gogoproto.nullable) = false];
  // The height when the offense occurred
  int64 height = 3;
  // The corresponding time where the offense occurred
  google.protobuf.Timestamp time = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  // Total voting power of the validator set in case the ABCI application does
  // not store historical validators.
  // https://github.com/tendermint/tendermint/issues/4581
  int64 total_voting_power = 5;
}

message EvmTxInfo {
  // buf:lint:ignore FIELD_LOWER_SNAKE_CASE We have caught this late; keeping to avoid breaking changes.
  string senderAddress = 1;
  uint64 nonce = 2;
  // buf:lint:ignore FIELD_LOWER_SNAKE_CASE We have caught this late; keeping to avoid breaking changes.
  string txHash = 3;
  // buf:lint:ignore FIELD_LOWER_SNAKE_CASE We have caught this late; keeping to avoid breaking changes.
  string vmError = 4;
}

//----------------------------------------
// State Sync Types

message Snapshot {
  uint64 height = 1; // The height at which the snapshot was taken
  uint32 format = 2; // The application-specific snapshot format
  uint32 chunks = 3; // Number of chunks in the snapshot
  bytes hash = 4; // Arbitrary snapshot hash, equal only if identical
  bytes metadata = 5; // Arbitrary application metadata
}
